* Updated blog layout to catch up with the board layout additions, and forced blog posts to show a neutral background instead of something reflecting the current post state. Readability, man. Anyone willing to turn that lonely style into a class? (MessageIndex.template.php) * Fixed Wireless skin on iPhones. Should look good enough, now, and more importantly... Usable! I'll be on my iPod in half an hour, and gosh I'll be glad I wrote all of that crap. (Wireless/sections.css, Wireless/sections.iphone.css) ! Ironically, .smalltext class is sometimes bigger than regular text on the iPhone. Quick hack on that one... Probably needs more work. (index.iphone.css) ! ssi_recentTopics() wasn't returning the most recent topics, because of a silly optimization I shouldn't have made. (SSI.php) ! WebGet was using CURLOPT_HTMLHEADER instead of HTTPHEADER... Honestly, I don't know a thing about the WebGet file but I'm fixin' errors from my log ;) (Class-WebGet.php)

--- a/Themes/default/skins/Wireless/sections.css
+++ b/Themes/default/skins/Wireless/sections.css
@@ -13,6 +13,8 @@
 		margin-right: 12px
 	img.avatar
 		max-height: 40px
+	ul
+		margin: 0
 
 .postarea
 	display: block
